plugins {
//    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'io.github.zjay'
version '2023.9.8'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    implementation 'com.alibaba:fastjson:1.2.83'
    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.4'
    implementation ('com.squareup.okhttp3:okhttp:4.11.0') {
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-common'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
    }
    implementation ('org.openjdk.jmh:jmh-core:1.36') {
//        exclude group: 'org.apache.commons', module: 'commons-math3'
    }








}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java']
    version '2021.3'//2021.3、2021.1、2020.3.4
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
    changeNotes """

    <h3>v2023.9.7</h3>
    <p>中文</p>
    <ul>
        <li>部分页面优化</li>
        <li>请求Body下的'JSON'tab改为Row，并且支持Text、JavaScript、JSON、HTML及XML的请求类型</li>
    </ul>
    <p>English</p>
    <ul>
        <li>Partial page optimization</li>
        <li>Change the 'JSON' tab under the request body to 'Row' and support request types for Text, JavaScript, JSON, HTML, and XML</li>
    </ul>
    <h3>v2023.8.30</h3>
    <p>中文</p>
    <ul>
        <li>兼容性修改</li>
    </ul>
    <p>English</p>
    <ul>
        <li>Compatibility modification</li>
    </ul>
    <h3>v2023.8.18</h3>
    <p>中文</p>
    <ul>
        <li>Response->Info页面优化显示</li>
        <li>所有的右键弹出框优化，可随着IDEA切换背景</li>
        <li>Headers选项卡标题会显示数量</li>
    </ul>
    <p>English</p>
    <ul>
        <li>Response ->Info page optimization display</li>
        <li>All right-click pop-up box optimizations allow for background switching with IDEA</li>
        <li>The Headers tab title will display the quantity</li>
    </ul>
    <h3>v2023.8.16</h3>
    <p>中文</p>
    <ul>
        <li>优化图标、页面一些元素</li>
    </ul>
    <p>English</p>
    <ul>
        <li>Optimize icons, page elements</li>
    </ul>
    <h3>v2023.8.11</h3>
    <p>中文</p>
    <ul>
        <li>在Response->Json中，支持右键弹出菜单，可以将响应字段(可多选)添加到(全局或者当前)请求头中，并且会自动屏蔽key或value为空的字段</li>
        <li>历史记录页面中添加可以删除所有历史记录的按钮</li>
        <li>格式化按钮显示位置优化，去除浏览Html的按钮</li>
    </ul>
    <p>English</p>
    <ul>
        <li>In Response -> Json, right-click popup menu is supported, and response fields (multiple choices are allowed) can be added to the (global or local) request header, and fields with empty key or value will be automatically blocked</li>
        <li>Add a button on the history page that can delete all history records</li>
        <li>Optimize the display position of formatting buttons, remove buttons for browsing HTML</li>
    </ul>
    <h3>v2023.8.7</h3>
    <ul>
        <li>最新版IDEA的支持，修复一些适配及图标优化，下载文件时的bug修复</li>
    </ul>
    <h3>v2023.8.4</h3>
    <ul>
        <li>修复历史请求列表url列显示换行问题</li>
    </ul>
    <h3>v2023.8.2</h3>
    <ul>
        <li>修复get请求下，请求参数encode问题</li>
    </ul>
    <h3>v2023.7.28</h3>
    <ul>
        <li>优化okhttp3的体积，实现更轻量化运用</li>
    </ul>
    <h3>v2023.7.26</h3>
    <ul>
        <li>修复已保存的请求，如果修改url后导致url不能实时更新的问题</li>
    </ul>
    <h3>v2023.7.19</h3>
    <ul>
        <li>修复get请求时，body也有数据导致请求报错的问题</li>
    </ul>
    <h3>v2023.7.18</h3>
    <ul>
        <li>压测部分优化</li>
        <li>优化请求响应的tab快速切换，提升流畅性</li>
        <li>请求方式全部修改为Okhttp3的方式</li>
        <li>修复全局请求头不生效的问题</li>
        <li>修复@RequestBody修饰的基础数据类型解析成字符串的问题</li>
    </ul>
    <h3>v2023.7.17</h3>
    <ul>
        <li>JMH压测功能正式发布，可自由设置并发线程数、执行次数等，并含有丰富的图表展示(暂时支持Restful请求，且不支持物理中断)，压测受到本地环境影响，如IDEA、操作系统等</li>
    </ul>
    <h3>v2023.7.4</h3>
    <ul>
        <li>新增压测功能，只是个体验版，启用线程数为cpu核数(如果有超线程，则为超线程数)乘2</li>
    </ul>
    <h3>v2023.6.27</h3>
    <ul>
        <li>兼容性修改</li>
        <li>局部优化</li>
    </ul>
    <h3>v2023.6.20</h3>
    <ul>
        <li>兼容性修改</li>
        <li>Navigate页面新增搜索框(可根据url或者方法名搜索)</li>
    </ul>
    <h3>v2023.6.19</h3>
    <ul> 
        <li>编辑器增加Soft-wrap支持，并且支持美化、html预览</li>
    </ul>
    <h3>v2023.6.16</h3>
    <ul>
        <li>支持Dubbo2.X版本的请求生成及简单测试(点send按钮)
        注：1、暂时只支持官方提供的@Service、@DubboService注解，xml文件的支持会在后续版本中提供(但是不一定)；
            2、测试方式为telnet方式，返回结果可能会存在问题(可以多请求几次)；
            3、3.X版本想要使用的需要在项目中引入TelnetHandler的实现；
            4、存在BUG请发邮件给我
        </li>
        <li>其他优化及BUG修复</li>
    </ul>
    <h3>v2023.6.12</h3>
    <ul>
        <li>Other optimizations and bug fixes</li>
    </ul>
    <h3>v2023.6.9</h3>
    <ul>
       <li>Add automatic spring generation method(right click choose Generate Spring Method or alt \\): 
       
       You only need to fill out a form according to the requirements, which will automatically generate code for the controller layer and service layer for you</li>
        <li>Other optimizations and bug fixes</li>
    </ul>

    <h3>v2023.5.21</h3>
    <ul>
            <li>Version compatibility is relaxed, and restrictions can support more versions</li>
        </ul>

    <h3>v2023.5.20</h3>
    <ul>
            <li>1、Add history query and request in APIs tab</li>
            <li>2、Add a request timeout setting in the configuration</li>
            <li>3、Other optimizations and bug fixes.</li>
        </ul>
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
    autoReloadPlugins true
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
